[gd_scene load_steps=6 format=3 uid="uid://bcjkja5m5dm7c"]

[ext_resource type="Script" path="res://scenes/rooms/breaker_panel.gd" id="1_q7eie"]
[ext_resource type="Texture2D" uid="uid://cy4j3ycwpqowy" path="res://art/back_button.png" id="2_h0prn"]
[ext_resource type="Texture2D" uid="uid://dn5o6hktm77w" path="res://art/room_art/specialroom_breaker.png" id="2_k4h6o"]
[ext_resource type="Texture2D" uid="uid://b7q7xqkjlstoi" path="res://art/room_art/switch_off.png" id="3_npq3s"]
[ext_resource type="Texture2D" uid="uid://m5uyt5uqf6l7" path="res://art/room_art/light_off.png" id="4_2titv"]

[node name="BreakerPanel" type="Node2D"]
script = ExtResource("1_q7eie")

[node name="BreakerBackground" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 800.0
texture = ExtResource("2_k4h6o")

[node name="ToGarage" type="TextureButton" parent="BreakerBackground"]
offset_left = 85.0
offset_top = 56.0
offset_right = 285.0
offset_bottom = 256.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("2_h0prn")

[node name="Switch_0" type="TextureButton" parent="BreakerBackground"]
layout_mode = 0
offset_left = 455.0
offset_top = 204.0
offset_right = 495.0
offset_bottom = 244.0
texture_normal = ExtResource("3_npq3s")
stretch_mode = 3

[node name="Light_0" type="TextureRect" parent="BreakerBackground"]
layout_mode = 0
offset_left = 655.0
offset_top = 205.0
offset_right = 695.0
offset_bottom = 245.0
texture = ExtResource("4_2titv")

[node name="Switch_1" type="TextureButton" parent="BreakerBackground"]
layout_mode = 0
offset_left = 455.0
offset_top = 268.0
offset_right = 495.0
offset_bottom = 308.0
texture_normal = ExtResource("3_npq3s")
stretch_mode = 3

[node name="Switch_2" type="TextureButton" parent="BreakerBackground"]
layout_mode = 0
offset_left = 455.0
offset_top = 343.0
offset_right = 495.0
offset_bottom = 383.0
texture_normal = ExtResource("3_npq3s")
stretch_mode = 3

[node name="Switch_3" type="TextureButton" parent="BreakerBackground"]
layout_mode = 0
offset_left = 455.0
offset_top = 407.0
offset_right = 495.0
offset_bottom = 447.0
texture_normal = ExtResource("3_npq3s")
stretch_mode = 3

[node name="Switch_4" type="TextureButton" parent="BreakerBackground"]
layout_mode = 0
offset_left = 455.0
offset_top = 476.0
offset_right = 495.0
offset_bottom = 516.0
texture_normal = ExtResource("3_npq3s")
stretch_mode = 3

[node name="Switch_5" type="TextureButton" parent="BreakerBackground"]
layout_mode = 0
offset_left = 455.0
offset_top = 550.0
offset_right = 495.0
offset_bottom = 590.0
texture_normal = ExtResource("3_npq3s")
stretch_mode = 3

[node name="Light_1" type="TextureRect" parent="BreakerBackground"]
layout_mode = 0
offset_left = 655.0
offset_top = 271.0
offset_right = 695.0
offset_bottom = 311.0
texture = ExtResource("4_2titv")

[node name="Light_2" type="TextureRect" parent="BreakerBackground"]
layout_mode = 0
offset_left = 655.0
offset_top = 333.0
offset_right = 695.0
offset_bottom = 373.0
texture = ExtResource("4_2titv")

[node name="Light_3" type="TextureRect" parent="BreakerBackground"]
layout_mode = 0
offset_left = 655.0
offset_top = 398.0
offset_right = 695.0
offset_bottom = 438.0
texture = ExtResource("4_2titv")

[node name="Light_4" type="TextureRect" parent="BreakerBackground"]
layout_mode = 0
offset_left = 655.0
offset_top = 466.0
offset_right = 695.0
offset_bottom = 506.0
texture = ExtResource("4_2titv")

[node name="Light_5" type="TextureRect" parent="BreakerBackground"]
layout_mode = 0
offset_left = 655.0
offset_top = 542.0
offset_right = 695.0
offset_bottom = 582.0
texture = ExtResource("4_2titv")

[connection signal="pressed" from="BreakerBackground/ToGarage" to="." method="_on_to_garage_pressed"]
[connection signal="pressed" from="BreakerBackground/Switch_0" to="." method="_on_switch_0_pressed"]
[connection signal="pressed" from="BreakerBackground/Switch_1" to="." method="_on_switch_1_pressed"]
[connection signal="pressed" from="BreakerBackground/Switch_2" to="." method="_on_switch_2_pressed"]
[connection signal="pressed" from="BreakerBackground/Switch_3" to="." method="_on_switch_3_pressed"]
[connection signal="pressed" from="BreakerBackground/Switch_4" to="." method="_on_switch_4_pressed"]
[connection signal="pressed" from="BreakerBackground/Switch_5" to="." method="_on_switch_5_pressed"]
